# godfiles

./: idk
Chat/: ChatGPT  ChatGPT.cpp
Macro Recorder/: a.out  localcompile.sh
Macro Recorder/src/: MouseMovementParametricizer.cpp  MouseMovementParametricizer.h  PlaybackManual.cpp  PlaybackManual.h  PlaybackRecorded.cpp  PlaybackRecorded.h  PlaybackSystem.cpp  PlaybackSystem.h  ProcessRecordedData.cpp  ProcessRecordedData.h  RecordSystem.cpp  RecordSystem.h  ScreenInteractor.cpp  ScreenInteractor.h  main.cpp  maths.cpp  maths.h  update.cpp  update.h
OpenCV/: CMakeLists.txt  README.txt
OpenCV/src/: main.cpp
Pathfinding App/: a.out  localcompile.sh
Pathfinding App/include/: config.h
Pathfinding App/src/: ScreenInteractor.cpp  ScreenInteractor.h  main.cpp
PmonImgReader/: CMakeLists.txt
PmonImgReader/src/: main.cpp  visual.cpp  visual.h
Pokemon.api/: AprilTag  AprilTag.cpp  PokemonCalc  PokemonCalc.cpp  README.txt  UltraLeague.csv  familydelete  familydelete.cpp
Pokemon.api/April Tag - Copy/: AprilTag.cpp  GreatLeague.csv  MasterLeague.csv  build.bat
Pokemon.api/league/: notes.txt
Pokemon.api/mingw64/: build-info.txt
SourceFinder/: DataPrep  Makefile  TrainModel  citation_model.pt  readme.md  scraped0.html
SyncBoxVideoAnalyzer/: a.out  localcompile.sh
SyncBoxVideoAnalyzer/src/: main.cpp
coneDetection/: build.sh
shrek/: a.out  localcompile.sh
shrek/deploy/: compile.sh  run.sh
shrek/src/: comms.cpp  comms.h  imaging.cpp  imaging.h  listener.cpp  listener.h  main.cpp  maths.cpp  maths.h  nn.cpp  nn.h
shrek/src/nn_presets/: bias_ho.txt  (+3 more)
(+250 files in other folders)
